--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ tweepy
 python-dotenv
 
 # google-generativeai provides access to Gemini models for prompt-based tweet generation and analysis
+google
 google-generativeai
 
 # deployment start command
